# patient_encounter

./: .bandit  .coverage  .env  README.md  pyproject.toml  test.db
.github/workflows/: ci.yml
src/: database.py  main.py
src/models/: model.py
src/schemas/: schema.py
src/services/: queries.py  utils.py
tests/: test_app.py  test_cov.py  test_main.py
